# xdg-desktop-portal-helium

./: .gitignore  NEWS  README.md  anda.hcl  meson.build  meson_options.txt  xdg-desktop-portal-gnome-tau.spec  xdg-desktop-portal-helium.doap  xdg-desktop-portal-helium.spec  xdg-desktop-portal-tau.doap  xdg-desktop-portal-tau.spec
.github/workflows/: package.yml
data/: gnome.portal  helium.portal  meson.build  mutter-x11-interop.xml  org.freedesktop.impl.portal.desktop.helium.service.in  org.freedesktop.impl.portal.desktop.tau.service.in  org.gnome.Mutter.ServiceChannel.xml  org.gnome.Shell.Introspect.xml  tau.portal  tau.portal.in  xdg-desktop-portal-gnome.service.in  xdg-desktop-portal-helium.desktop.in.in  xdg-desktop-portal-helium.service.in  xdg-desktop-portal-tau.desktop.in.in  xdg-desktop-portal-tau.service.in
po/: POTFILES.in  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+6 more)
src/: accountdialog.ui  appchooserdialog.ui  appchooserrow.ui  externalwindow-wayland.c  externalwindow-wayland.h  externalwindow-x11.c  externalwindow-x11.h  externalwindow.c  externalwindow.h  fc-monitor.c  fc-monitor.h  meson.build  remotedesktopdialog.ui  screencastdialog.ui  screencastwidget.ui  screenshotdialog.ui  settings.c  shellintrospect.h  wallpaperdialog.ui  wallpaperpreview.ui  xdg-desktop-portal-gnome.c  xdg-desktop-portal-gnome.gresource.xml  xdg-desktop-portal-gnome.gschema.xml  xdg-desktop-portal-helium.c  xdg-desktop-portal-helium.gresource.xml  xdg-desktop-portal-helium.gschema.xml  xdg-desktop-portal-tau.c  xdg-desktop-portal-tau.gresource.xml  xdg-desktop-portal-tau.gschema.xml
subprojects/: libadwaita.wrap
